# logic

./: .gitignore  CMakeLists.txt
doc/: todo.txt
src/: Equation.cpp  Equation.h  main.cpp
